# rsg-cfsi

./: .gitignore  CITATION.cff  README.md  limitations.md  pyproject.toml
configs/: data_manifest.example.csv  train_test_lock.example.json
examples/: run_demo.py
src/rsg_cfsi/: arms.py  evaluate.py  indicator.py  labels.py  synthetic.py
tests/: test_indicator.py
