[project]
name = "rsg-cfsi"
version = "0.1.0"
description = "RSG-CFSI reference implementation - regularized financial stress indicator with an out-of-sample discipline"
authors = [{name = "Taiko Toeda", email = "toeda.t@gmail.com"}]
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[tool.pytest.ini_options]
testpaths = ["tests"]
